--- a/IsTakip.Web/Areas/Member/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/Home/Index.cshtml
@@ -9,14 +9,62 @@
     <div class="col-md-6">
 
         <div class="card text-white bg-dark mb-3 my-3">
+            <div class="card-header">Tamamlamış olduğunuz</div>
+            <div class="card-body">
+                <h4 class="card-title font-weight-bold text-center">GÖREV SAYISI</h4>
+                @if (ViewBag.TamamlananGorevSayisi > 0)
+                {
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.TamamlananGorevSayisi</p>
+                    <p class="text-right " style="font-size:12px;">
+                        İncelemek için <a asp-action="Index" asp-controller="Gorev"
+                                          class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>
+                }
+                else
+                {
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">Henüz hiçbir görevi tamamlamamışsınız.</p>
+                }
+            </div>
+
+        </div>
+    </div>
+
+    <div class="col-md-6">
+
+        <div class="card text-white bg-dark mb-3 my-3">
+            <div class="card-header">Tamamlamamış olduğunuz</div>
+            <div class="card-body">
+                <h4 class="card-title font-weight-bold text-center">GÖREV SAYISI</h4>
+                @if (ViewBag.TamamlanmasiGerekenGorevSayisi > 0)
+                {
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.TamamlanmasiGerekenGorevSayisi</p>
+                    <p class="text-right " style="font-size:12px;">
+                        Tamamlamak için <a asp-action="Index" asp-controller="IsEmri"
+                                          class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>
+                }
+                else
+                {
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">Herhangi bir iş emriniz bulunmamaktadır.</p>
+                }
+            </div>
+
+        </div>
+    </div>
+
+    <div class="col-md-6">
+
+        <div class="card text-white bg-dark mb-3 my-3">
             <div class="card-header">Yazmış olduğunuz</div>
             <div class="card-body">
                 <h4 class="card-title font-weight-bold text-center">RAPOR SAYISI</h4>
                 @if (ViewBag.RaporSayisi > 0)
                 {
                     <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.RaporSayisi</p>
-                    <p class=" text-right" style="font-size:12px;">İncelemek için <a asp-action="Index" asp-controller="IsEmri" 
-                       class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a></p>
+                    <p class=" text-right" style="font-size:12px;">
+                        İncelemek için <a asp-action="Index" asp-controller="IsEmri"
+                                          class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>
                 }
                 else
                 {
@@ -27,29 +75,30 @@
 
         </div>
 
-    </div> 
+    </div>
+
     <div class="col-md-6">
 
         <div class="card text-white bg-dark mb-3 my-3">
-            <div class="card-header">Tamamlamış olduğunuz</div>
+            <div class="card-header">Henüz okumadığınız</div>
             <div class="card-body">
-                <h4 class="card-title font-weight-bold text-center">GÖREV SAYISI</h4>
-                @if (ViewBag.TamamlananGorevSayisi > 0)
+                <h4 class="card-title font-weight-bold text-center">BİLDİRİMLER</h4>
+                @if (ViewBag.OkunmamisBildirimSayisi > 0)
                 {
-                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.TamamlananGorevSayisi</p>
-                    <p class="text-right " style="font-size:12px;">İncelemek için <a asp-action="Index" asp-controller="Gorev" 
-                       class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a></p>
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.OkunmamisBildirimSayisi</p>
+                    <p class="text-right " style="font-size:12px;">
+                        Okumak için <a asp-action="Index" asp-controller="Bildirim"
+                                       class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>
                 }
                 else
                 {
-            <p class="card-text font-weight-bold text-center" style="font-size:20px;">Henüz hiçbir görevi tamamlamamışsınız.</p>
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">Hepsini okudunuz.</p>
                 }
             </div>
 
 
         </div>
-
     </div>
 
-  
 </div>
