--- a/IsTakip.Web/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Views/Home/Index.cshtml
@@ -9,20 +9,20 @@
     <h4 class="text-center">GİRİŞ YAP</h4>
 
     <div class="form-group ">
-        <label asp-for="UserName"></label>
+        <label asp-for="UserName">Kullanıcı Adı :</label>
         <span asp-validation-for="UserName" class="text-danger"></span>
         <input asp-for="UserName" class="form-control" />
     </div>
 
     <div class="form-group">
-        <label asp-for="Password"></label>
+        <label asp-for="Password">Şifre :</label>
         <span asp-validation-for="Password" class="text-danger"></span>
         <input asp-for="Password" class="form-control" />
 
     </div> 
     <div class="form-check">
         <input type="checkbox" asp-for="RememberMe" class="form-check-input" />
-        <label asp-for="RememberMe" class="form-check-label"></label>
+        <label asp-for="RememberMe" class="form-check-label">Beni Hatırla</label>
         <span asp-validation-for="RememberMe" class="text-danger"></span>
 
     </div>
