--- a/IsTakip.Web/Views/Home/KayitOl.cshtml
+++ b/IsTakip.Web/Views/Home/KayitOl.cshtml
@@ -1,4 +1,4 @@
-﻿@model AppUserAddViewModal
+﻿@model AppUserAddDto
 @{
     ViewData["Title"] = "KayitOl";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,13 +8,13 @@
     <h4 class="text-center">KAYIT OL</h4>
 
     <div class="form-group">
-        <label asp-for="Name"></label>
+        <label asp-for="Name">Adınız :</label>
         <span asp-validation-for="Name" class="text-danger"></span>
         <input asp-for="Name" type="text" class="form-control" />
     </div>
 
     <div class="form-group">
-        <label asp-for="SurName"></label>
+        <label asp-for="SurName">Soyadınız :</label>
         <span asp-validation-for="SurName" class="text-danger"></span>
         <input asp-for="SurName" type="text" class="form-control" />
     </div>
@@ -25,21 +25,21 @@
         <input asp-for="Email" class="form-control" />
     </div>
     <div class="form-group ">
-        <label asp-for="UserName"></label>
+        <label asp-for="UserName">Kullanıcı Adınız :</label>
         <span asp-validation-for="UserName" class="text-danger"></span>
         <input asp-for="UserName" class="form-control" />
     </div>
 
     <div class="form-group">
-        <label asp-for="Password"></label>
+        <label asp-for="Password">Şifreniz :</label>
         <span asp-validation-for="Password" class="text-danger"></span>
-        <input asp-for="Password" class="form-control" />
+        <input type="password" asp-for="Password" class="form-control" />
 
     </div>
     <div class="form-group">
-        <label asp-for="ConfirmPassword"></label>
+        <label asp-for="ConfirmPassword">Parola Tekrar :</label>
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        <input asp-for="ConfirmPassword" class="form-control" />
+        <input type="password" asp-for="ConfirmPassword" class="form-control" />
 
     </div>
   
