--- a/IsTakip.Web/Views/_ViewImports.cshtml
+++ b/IsTakip.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @using IsTakip.Web.Models
 @using IsTakip.Web.Areas.Admin.Models
+@using IsTakip.DTO.DTOs.AppUserDtos
