--- a/IsTakip.Web/Areas/Member/Views/_ViewImports.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
-@using IsTakip.Web.Areas.Admin.Models
 @using IsTakip.DTO.DTOs.BildirimDtos
 @using IsTakip.DTO.DTOs.GorevDtos
 @using IsTakip.DTO.DTOs.RaporDtos
+@using IsTakip.DTO.DTOs.AppUserDtos
