--- a/IsTakip.Web/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model AppUserSignInModel
+﻿@model AppUserSignInDto
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
