--- a/IsTakip.Web/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <div class="form-group">
         <label asp-for="Password">Şifre :</label>
         <span asp-validation-for="Password" class="text-danger"></span>
-        <input asp-for="Password" class="form-control" />
+        <input asp-for="Password" type="password" class="form-control" />
 
     </div> 
     <div class="form-check">
