--- a/IsTakip.Web/Areas/Admin/Views/Grafik/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Grafik/Index.cshtml
@@ -20,7 +20,8 @@
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
-       
+
+
         google.charts.load('current', { 'packages': ['corechart'] });
         google.charts.setOnLoadCallback(drawChart);
 
@@ -43,14 +44,14 @@
             var data = google.visualization.arrayToDataTable(enCokIsTamamlayan);
 
             var options = {
-                title: 'En çok iş tamamlayan 5 personel'
+                title: 'En Çok İş Tamamlayan 5 Personel'
             };
 
             var chart = new google.visualization.PieChart(document.getElementById('piechart'));
 
             chart.draw(data, options);
         }
-   
+
         google.charts.load("current", { packages: ["corechart"] });
         google.charts.setOnLoadCallback(drawChart2);
         function drawChart2() {
